# table_analysis

./: .gitignore  ISSUE.md  MANIFEST.in  README.md  SETUP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
conf/: config.yaml
conf/clearml/: hyperparams_sections.yaml  project_layout.yaml  templates.lock.yaml  templates.yaml
conf/data/: base.yaml
docs/: 00_SCOPE.md  01_POLYREPO_INTENT.md  02_ARCHITECTURE.md  03_CLEARML_UI_CONTRACT.md  05_PROCESS_CATALOG.md  06_ARTIFACTS_AND_VERSIONING.md  07_EVALUATION_PROTOCOL.md  09_RISKS_AND_MITIGATIONS.md  10_OPERATION_MODES.md  13_PLATFORM_INTEGRATION.md  14_MODEL_CATALOG.md  15_VERIFICATION.md  16_OPERATIONS_RUNBOOK.md  17_OPERATOR_QUICKSTART.md  18_CONTRIBUTING.md  22_EXECUTION_POLICY.md  22_SERVING.md  24_REPORTING.md  25_ALERTING.md  26_REPRODUCIBLE_RUNTIME.md  27_DATA_QUALITY.md  28_RETRAIN.md  40_CLEARML_TEST_PHASE_POLICY.md  43_CLEARML_UI_LAYOUT_EXAMPLES.md  50_CLEARML_PROCESSED_DATASET_CONTRACT.md  51_CLEARML_PLOTS_SCALARS_DEBUGSAMPLES_CONTRACT.md  52_CLEARML_PIPELINE_CONTROLLER_CONTRACT.md  53_CLEARML_HYPERPARAMETERS_CONTRACT.md  54_CLEARML_MINIMALITY_GUIDE.md  55_CLEARML_UI_CHECKLIST.md  60_PIPELINE_TRAIN_CONTRACT.md  61_CLEARML_HPARAMS_SECTIONS.md  62_CLEARML_PLOTS_REGRESSION.md  63_CLEARML_PIPELINES_VISIBILITY.md  64_INFER_BATCH_OPTIMIZE_CONTRACT.md  65_DEV_GUIDE_DIRECTORY_MAP.md  66_NAMING_TAGGING_POLICY.md  67_REHEARSAL_COMMANDS.md  68_CLEARML_AGENT_TROUBLESHOOTING.md  69_CLEARML_TROUBLESHOOTING.md  (+8 more)
requirements/: base.txt  models.txt
tools/: cleanup_repo.py  clearml_entrypoint.py
(+191 files in other folders)
