[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-solution-tabular-analysis"
version = "0.1.0"
description = "Tabular Analysis solution repository (polyrepo) built on top of ml-platform."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Team", email = "dev@example.com"}]

dependencies = [
  "ml-platform @ git+https://github.com/dkawa2523/ml_platform_v1@master",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.7.0",
  "plotly>=5.18.0",
  "pyarrow>=14.0.0",
  "clearml>=1.15.0",
  "pydantic>=2.6.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]
models = [
  "lightgbm>=4.0",
  "xgboost>=2.0",
  "catboost>=1.2",
]
tabpfn = [
  "tabpfn>=0.1",
]
optuna = [
  "optuna>=3.0.0",
]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
# After implementation, this command becomes the standard entry point.
# During Codex-driven development it is okay if it only shows --help.
tabular-analysis = "tabular_analysis.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
